# UV-Projection

./: .gitattributes  .gitignore  AGENTS.md  README.md  demo.py  problem.md  pyproject.toml  requirements.txt  solve.md
docs/: uv_progress_report_20260329.md
docs/repo/: git_conventions.md
docs/uv/: README.md  method25_implementation.md  method2_abc_experiment_foundations.md  method2_implementation.md  method2_method4_experiment_group_meeting_summary.md  method4_implementation.md
experiments/: README.md  uv_research_roadmap.md
experiments/configs/: homework_baseline.yaml  mitsuba_smoke.yaml  uv_stage1_legacy_once.yaml  uv_stage1_method1.yaml  uv_stage2_method2.yaml  uv_stage2_method4.yaml
experiments/reports/: method2_diagnostics_20260327.json  method2_hypothesis_cuda_20260327.json  method2_hypothesis_static_20260327.json  stage2_20260326-235116.json  stage2_20260326-235116.md  stage2_20260326-235713.json  stage2_20260326-235713.md  stage2_20260327-104555.json  stage2_20260327-104555.md  stage2_20260327-105323.json  stage2_20260327-105323.md
experiments/scripts/: analyze_glb_uv_layout.py  analyze_method2_hypothesis.py  run_uv_reset_massive.sh
pipeline/: README.md
renderer/mitsuba3/: README.md
renderer/mitsuba3/presets/: default.yaml
renderer/mitsuba3/scripts/: render_scene.py
src/faithc_infra/: __init__.py  cli.py  config.py  logger.py  mesh_io.py  pathing.py  profiler.py  registry.py  reporting_stage2.py  types.py
src/faithc_infra/services/: __init__.py  atom3d_runtime.py  decimation.py  eval.py  halfedge_topology.py  reconstruction.py  render.py  uv_projector.py
src/faithc_infra/services/uv/: __init__.py  closure_validation.py  correspondence.py  field_projector.py  hybrid_pipeline.py  island_pipeline.py  linear_solver.py  mesh_sanitizer.py  method25_pipeline.py  method2_pipeline.py  method2p_pipeline.py  method4_pipeline.py  openmesh_seams.py  options.py  quality.py  sampling.py  seam_optimization.py  seam_routing.py  semantic_transfer.py  solve_constraints.py  texture_io.py
src/faithcontour/: decoder.py  encoder.py
tools/diagnostics/: audit_faithc_pipeline.py  audit_method2_internal.py  audit_method2_internal_core.py  audit_method2_internal_experiments.py  audit_semantic_connectivity.py  run_method25_fourway_suite.py  run_method2_internal_experiments.py  run_method2_massive_diagnostic_suite.py  validate_uv_closure.py
tools/preview/: run_faithc_preview.py
viewer/opengl_previewer/: CMakeLists.txt  README.md
viewer/opengl_previewer/src/: job_output_view.cpp  job_output_view.h  job_result_schema.cpp  job_result_schema.h  main.cpp  mesh_loader.cpp  mesh_loader.h
